--- a/MetalChartDev/MetalChartDev/Base.lproj/Main.storyboard
+++ b/MetalChartDev/MetalChartDev/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -23,10 +23,6 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="ygm-Ew-ej8" secondAttribute="height" multiplier="1:1" id="C4u-gH-gO8"/>
                                 </constraints>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="TAB-pm-xdG" appends="YES" id="2Vw-Do-pa6"/>
-                                    <outletCollection property="gestureRecognizers" destination="c54-rs-69b" appends="YES" id="yKI-9q-Gx0"/>
-                                </connections>
                             </view>
                         </subviews>
                         <animations/>
@@ -44,7 +40,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <panGestureRecognizer minimumNumberOfTouches="1" maximumNumberOfTouches="1" id="TAB-pm-xdG"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="TAB-pm-xdG"/>
                 <pinchGestureRecognizer id="c54-rs-69b"/>
             </objects>
             <point key="canvasLocation" x="220" y="462"/>
