--- a/MetalChartDev/MetalChartDev/Base.lproj/Main.storyboard
+++ b/MetalChartDev/MetalChartDev/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dM4-em-aFZ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -42,11 +42,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="TAB-pm-xdG"/>
                 <pinchGestureRecognizer id="c54-rs-69b"/>
-                <tapGestureRecognizer id="dOG-xX-0k0">
-                    <connections>
-                        <action selector="chartTapped:" destination="BYZ-38-t0r" id="MjE-Vj-O0K"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer id="dOG-xX-0k0"/>
             </objects>
             <point key="canvasLocation" x="220" y="462"/>
         </scene>
@@ -81,9 +77,9 @@
                     </view>
                     <connections>
                         <outlet property="metalView" destination="evS-Pu-3nH" id="wLh-ao-s4i"/>
-                        <outlet property="panRecognizer" destination="TAB-pm-xdG" id="xfW-q3-LzL"/>
-                        <outlet property="pinchRecognizer" destination="c54-rs-69b" id="ou4-vf-1Mv"/>
-                        <outlet property="tapRecognizer" destination="dOG-xX-0k0" id="50b-91-aO5"/>
+                        <outlet property="panRecognizer" destination="K9U-Xh-yst" id="E4b-cp-7kM"/>
+                        <outlet property="pinchRecognizer" destination="QEL-UN-6PH" id="3pO-Cp-AF7"/>
+                        <outlet property="tapRecognizer" destination="GPk-0Y-oxU" id="NqV-09-otw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fOi-xM-qMu" sceneMemberID="firstResponder"/>
