--- a/MetalChartDev/MetalChartDev/Base.lproj/Main.storyboard
+++ b/MetalChartDev/MetalChartDev/Base.lproj/Main.storyboard
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dM4-em-aFZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E2066" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dM4-em-aFZ">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="HnK-dl-Suv">
             <objects>
-                <pinchGestureRecognizer id="QEL-UN-6PH"/>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="K9U-Xh-yst" customClass="FMPanGestureRecognizer"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fOi-xM-qMu" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="GPk-0Y-oxU">
-                    <connections>
-                        <action selector="chartTapped:" destination="dM4-em-aFZ" id="trR-4f-Wtt"/>
-                    </connections>
-                </tapGestureRecognizer>
                 <viewController id="dM4-em-aFZ" customClass="ViewController" customModule="MetalChartDev" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0Vj-LR-na1"/>
@@ -45,6 +36,14 @@
                         <outlet property="tapRecognizer" destination="GPk-0Y-oxU" id="NqV-09-otw"/>
                     </connections>
                 </viewController>
+                <pinchGestureRecognizer id="QEL-UN-6PH"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="K9U-Xh-yst" customClass="FMPanGestureRecognizer"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fOi-xM-qMu" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="GPk-0Y-oxU">
+                    <connections>
+                        <action selector="chartTapped:" destination="dM4-em-aFZ" id="trR-4f-Wtt"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="220" y="462"/>
         </scene>
